--- a/_layouts/default_good.html
+++ b/_layouts/default_good.html
@@ -137,7 +137,7 @@ layout: default
                                     <li><a href="" class="active" data-filter="*">All</a></li>
                                     <li><a href="" data-filter=".stability">Stability</a></li>
                                     <li><a href="" data-filter=".optimalcontrol">optimal control</a></li>
-                                    <li><a href="" data-filter=".graphics">Graphics</a></li>
+                                    <li><a href="" data-filter=".reinforcementlearning">reinforcementlearning</a></li>
                                     <li><a href="" data-filter=".ads">Advertising</a></li>
                                     <li><a href="" data-filter=".fashion">Fashion</a></li>
                                 </ul>
@@ -160,11 +160,11 @@ layout: default
                             <!-- end single work -->
 
                             <!-- single work -->
-                            <div class="col-md-4 col-sm-6 ads graphics">
+                            <div class="col-md-4 col-sm-6 ads reinforcementlearning">
                                 <a id="demo02" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/03.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>Floating mockups</span> <em>Ads / Graphics</em> </div>
+                                            <div class="item_info"> <span>Floating mockups</span> <em>Ads / reinforcementlearning</em> </div>
                                         </div>
                                     </div>
                                 </a>
@@ -196,11 +196,11 @@ layout: default
                             <!-- end single work -->
 
                             <!-- single work -->
-                            <div class="col-md-4 col-sm-6 graphics ads">
+                            <div class="col-md-4 col-sm-6 reinforcementlearning ads">
                                 <a id="demo05" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/05.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>Mobile devices</span> <em>Graphics / Ads</em> </div>
+                                            <div class="item_info"> <span>Mobile devices</span> <em>reinforcementlearning / Ads</em> </div>
                                         </div>
                                     </div>
                                 </a>
@@ -220,11 +220,11 @@ layout: default
                             <!-- end single work -->
 
                             <!-- single work -->
-                            <div class="col-md-4 col-sm-6 graphics ads">
+                            <div class="col-md-4 col-sm-6 reinforcementlearning ads">
                                 <a id="demo07" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/06.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>Mobile devices</span> <em>Graphics / Ads</em> </div>
+                                            <div class="item_info"> <span>Mobile devices</span> <em>reinforcementlearning / Ads</em> </div>
                                         </div>
                                     </div>
                                 </a>
@@ -232,11 +232,11 @@ layout: default
                             <!-- end single work -->
 
                             <!-- single work -->
-                            <div class="col-md-4 col-sm-6 graphics ads">
+                            <div class="col-md-4 col-sm-6 reinforcementlearning ads">
                                 <a id="demo08" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/07.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>Mobile devices</span> <em>Graphics / Ads</em> </div>
+                                            <div class="item_info"> <span>Mobile devices</span> <em>reinforcementlearning / Ads</em> </div>
                                         </div>
                                     </div>
                                 </a>
@@ -244,11 +244,11 @@ layout: default
                             <!-- end single work -->
 
                             <!-- single work -->
-                            <div class="col-md-4 col-sm-6 graphics ads">
+                            <div class="col-md-4 col-sm-6 reinforcementlearning ads">
                                 <a id="demo09" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/08.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>Mobile devices</span> <em>Graphics / Ads</em> </div>
+                                            <div class="item_info"> <span>Mobile devices</span> <em>reinforcementlearning / Ads</em> </div>
                                         </div>
                                     </div>
                                 </a>
