--- a/_layouts/default_good.html
+++ b/_layouts/default_good.html
@@ -139,7 +139,7 @@ layout: default
                                     <li><a href="" data-filter=".optimalcontrol">optimal control</a></li>
                                     <li><a href="" data-filter=".reinforcementlearning">reinforcement learning</a></li>
                                     <li><a href="" data-filter=".imitationlearning">imitation learning</a></li>
-                                    <li><a href="" data-filter=".fashion">Fashion</a></li>
+                                    <li><a href="" data-filter=".generativemodelling">generative modelling</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -148,11 +148,11 @@ layout: default
                         <!-- portfolio_container -->
                         <div class="no-padding portfolio_container clearfix" data-aos="fade-up">
                             <!-- single work -->
-                            <div class="col-md-4 col-sm-6  fashion optimalcontrol">
+                            <div class="col-md-4 col-sm-6  generativemodelling optimalcontrol">
                                 <a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/01.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>Mockups in seconds</span> <em>Fashion / optimalcontrol</em> </div>
+                                            <div class="item_info"> <span>Mockups in seconds</span> <em>generativemodelling / optimalcontrol</em> </div>
                                         </div>
                                     </div>
                                 </a>
@@ -184,11 +184,11 @@ layout: default
                             <!-- end single work -->
 
                             <!-- single work -->
-                            <div class="col-md-4 col-sm-6 fashion imitationlearning">
+                            <div class="col-md-4 col-sm-6 generativemodelling imitationlearning">
                                 <a id="demo04" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/04.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>Held by hands</span> <em>Fashion / imitationlearning</em> </div>
+                                            <div class="item_info"> <span>Held by hands</span> <em>generativemodelling / imitationlearning</em> </div>
                                         </div>
                                     </div>
                                 </a>
