--- a/_layouts/default_good.html
+++ b/_layouts/default_good.html
@@ -147,6 +147,21 @@ layout: default
 
                         <!-- portfolio_container -->
                         <div class="no-padding portfolio_container clearfix" data-aos="fade-up">
+                          {% for post in site.posts %}
+                            <!-- single work -->
+                            <div class="col-md-4 col-sm-6  generativemodelling optimalcontrol">
+                                <a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/01.jpg" alt="image" class="img-responsive" />
+                                    <div class="portfolio_item_hover">
+                                        <div class="portfolio-border clearfix">
+                                            <div class="item_info"> <span>Mockups in seconds</span> <em>generativemodelling / optimalcontrol</em> </div>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <!-- end single work -->
+                          {% else %}
+                            <h3>No Publicationswwee</h3>
+                          {% endfor %}
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6  generativemodelling optimalcontrol">
                                 <a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/01.jpg" alt="image" class="img-responsive" />
