--- a/_layouts/default_good.html
+++ b/_layouts/default_good.html
@@ -190,8 +190,8 @@ layout: default
                 <h3>Social Network</h3>
 
                 <ul class="social">
-                    <li><a href="#"><i class="ion-social-twitter"></i></a></li>
-                    <li><a href="#"><i class="ion-social-github"></i></a></li>
+                    <li><a href="https://twitter.com/theCamusean"><i class="ion-social-twitter"></i></a></li>
+                    <li><a href="https://github.com/TheCamusean"><i class="ion-social-github"></i></a></li>
                 </ul>
                 <div class="clearfix"></div>
                 <div class="h-50"></div>
