--- a/_layouts/default_good.html
+++ b/_layouts/default_good.html
@@ -200,21 +200,11 @@ layout: default
                 <p>Hochschulstr. 10, Room E225, Building S2|02,
                 64289 Darmstadt(Germany)</p>
 
-            </div>
-            <div class="col-md-8" data-aos="fade-up">
-                <form class="contact-bg" id="contact-form" name="contact" method="post" novalidate="novalidate">
-                    <input type="text" name="name" class="form-control" placeholder="Your Name" />
-                    <input type="email" name="email" class="form-control" placeholder="Your E-mail" />
-                    <input type="text" name="phone" class="form-control" placeholder="Phone Number" />
-                    <textarea name="message" class="form-control" placeholder="Your Message" style="height:120px"></textarea>
-                    <button id="submit" type="submit" name="submit" class="btn btn-glance">Send</button>
-                    <div id="success">
-                        <p class="green textcenter"> Your message was sent successfully! I will be in touch as soon as I can. </p>
-                    </div>
-                    <div id="error">
-                        <p> Something went wrong, try refreshing and submitting the form again. </p>
-                    </div>
-                </form>
+
+                <!-- copyright -->
+                &copy; 2020 Julen Urain
+                <span style="display:inline-block; width: 50px;"></span>
+                Design: <a href="https://www.free-css.com/free-css-templates" target='blank'>Free CSS</a>
             </div>
         </div>
     </div>
