--- a/_layouts/default_good.html
+++ b/_layouts/default_good.html
@@ -149,11 +149,11 @@ layout: default
                         <div class="no-padding portfolio_container clearfix" data-aos="fade-up">
                           {% for post in site.posts %}
                             <!-- single work -->
-                            <div class="col-md-4 col-sm-6  generativemodelling optimalcontrol">
+                            <div class="col-md-4 col-sm-6  {{post.fields}}">
                                 <a href="{{ post.url | prepend: site.baseurl }}" class="portfolio_item"> <img src="img/portfolio/01.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>{{post.title}}</span> <em>generativemodelling / optimalcontrol</em> </div>
+                                            <div class="item_info"> <span>{{post.title}}</span> <em>{{posts.extra}}</em> </div>
                                         </div>
                                     </div>
                                 </a>
