--- a/_layouts/default_good.html
+++ b/_layouts/default_good.html
@@ -153,7 +153,7 @@ layout: default
                                 <a href="{{ post.url | prepend: site.baseurl }}" class="portfolio_item"> <img src="img/portfolio/01.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>{{post.title}}</span> <em>{{posts.extra}}</em> </div>
+                                            <div class="item_info"> <span>{{post.title}}</span> <em>{{post.extra}}</em> </div>
                                         </div>
                                     </div>
                                 </a>
