--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -7,11 +7,25 @@ categories: github jekyll
 ---
 
 <head>
+    <script>
+        window.onbeforeunload = function () {
+        window.scrollTo(0, 0);
+        }
+    </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159075680-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-159075680-1');
+    </script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{page.title}}</title>
-    <link rel="icon" href="Figures/icon.png" type="image/x-icon">
+    <title>Greedy InfoMax</title>
+    <link rel="icon" href="img/favicon-32x32.png" type="image/png">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="ionicons/css/ionicons.min.css" rel="stylesheet">
@@ -25,20 +39,51 @@ categories: github jekyll
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
 
+<body>
 
-<!-- home -->
-<div class="section" id="home" data-stellar-background-ratio="0.5">
-    <div class="container">
-        <div class="disply-table">
-            <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
-                <h1><span class='W'>{{page.title}}</span></h1>
-                <h4>{{page.extra}}</h4></div>
+    <div id="top"></div>
+
+    <!-- Preloader -->
+    <div id="preloader">
+        <div id="status">
+
+            <div class="preloader" aria-busy="true" aria-label="Loading, please wait." role="progressbar">
+            </div>
+
         </div>
     </div>
-</div>
-<!-- ./home -->
+    <!-- ./Preloader -->
+
+    <!-- header -->
+    <header class="navbar-fixed-top">
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+            </ul>
+        </nav>
+    </header>
+    <!-- ./header -->
+
+    <!-- home -->
+    <div class="section" id="home" data-stellar-background-ratio="0.5">
+        <div class="container">
+            <div class="disply-table">
+                <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
+                    <h4>Sindy Löwe, April 2020</h4>
+                    <h1>Greedy InfoMax<br/></h1>
+                    <ul class="social">
+                    <li><a href="https://arxiv.org/abs/1905.11786" target='blank'><i class="ion-document-text"></i></a></li>
+                    <li><a href="https://github.com/loeweX/Greedy_InfoMax" target='blank'><i class="ion-social-github"></i></a></li>
+                </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- ./home -->
 
 
 <script type="text/x-mathjax-config">
