--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -73,8 +73,7 @@ categories: github jekyll
         <div class="container">
             <div class="disply-table">
                 <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
-                    <h4>Sindy Löwe, April 2020</h4>
-                    <h1>Greedy InfoMax<br/></h1>
+                    <h1>{{page.title}}<br/></h1>
                     <ul class="social">
                     <li><a href="https://arxiv.org/abs/1905.11786" target='blank'><i class="ion-document-text"></i></a></li>
                     <li><a href="https://github.com/loeweX/Greedy_InfoMax" target='blank'><i class="ion-social-github"></i></a></li>
